<resources>
    <string name="app_name">Barkit</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="welcome">Welcome!</string>
    <string name="please_login">Please login to your account!</string>
    <string name="search_hint">Find what you need...</string>
    <string name="category">Category</string>
    <string name="discover_products">Discover Products</string>
    <string name="product_detail">Product Detail</string>
    <string name="stock">Stock</string>
    <string name="subcategory">Subcategory</string>
    <string name="description">Description</string>
    <string name="rent_now">Rent Now</string>
    <string name="rented_item">Rented Item</string>
    <string name="delivery_and_payment">Delivery and Payment</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="payment_method">Payment Method</string>
    <string name="courier">Courier</string>
    <string name="total_price">Total Price</string>
    <string name="confirm">Confirm</string>
    <string name="rental_duration">Rental Duration</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="set_rental_duration">Set Rental Duration</string>
    <string-array name="payments">
        <item>Tunai</item>
        <item>BarKit Pay</item>
        <item>BarKit Paylater</item>
        <item>AdaKami</item>
    </string-array>
    <string-array name="couriers">
        <item>JNE</item>
        <item>AnterAja</item>
        <item>SiCepat</item>
    </string-array>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="order">Order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rent_item">Rent Item</string>
    <string name="rent_again">Rent Again</string>
    <string name="my_store">My Store</string>
    <string name="email_not_verified">Email not verified!</string>
    <string name="email_verified">Email verified!</string>
    <string name="store_name">Store Name</string>
    <string name="store_address">Store Address</string>
    <string name="store_email">Store Email</string>
    <string name="store_phone">Store Phone</string>
    <string name="add_store">Add Store</string>
    <string name="cancel">Cancel</string>
    <string name="all_product">All Product</string>
    <string name="add_product_photo">Add Product Photo</string>
    <string name="add_product">Add Product</string>
    <string name="want_to_rent">Mau sewa apa hari ini?</string>
    <string name="logout">Logout</string>
</resources>