<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addstore.AddStoreActivity">

    <EditText
        android:id="@+id/edt_store_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/store_name"
        android:inputType="textPersonName"
        android:lines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_store_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/store_address"
        android:inputType="text"
        android:lines="1"
        app:layout_constraintEnd_toEndOf="@+id/edt_store_name"
        app:layout_constraintStart_toStartOf="@+id/edt_store_name"
        app:layout_constraintTop_toBottomOf="@+id/edt_store_name" />

    <EditText
        android:id="@+id/edt_store_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/store_email"
        android:inputType="textEmailAddress"
        android:lines="1"
        app:layout_constraintEnd_toEndOf="@+id/edt_store_address"
        app:layout_constraintStart_toStartOf="@+id/edt_store_address"
        app:layout_constraintTop_toBottomOf="@+id/edt_store_address" />

    <EditText
        android:id="@+id/edt_store_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/store_phone"
        android:inputType="phone"
        android:lines="1"
        app:layout_constraintEnd_toEndOf="@+id/edt_store_email"
        app:layout_constraintStart_toStartOf="@+id/edt_store_email"
        app:layout_constraintTop_toBottomOf="@+id/edt_store_email" />

    <com.barkit.app.customview.MyButton
        android:id="@+id/btn_add_store"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_store"
        app:layout_constraintEnd_toEndOf="@+id/edt_store_phone"
        app:layout_constraintStart_toStartOf="@+id/edt_store_phone"
        app:layout_constraintTop_toBottomOf="@+id/edt_store_phone" />

    <com.barkit.app.customview.MyButton
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        app:isSecondary="true"
        app:layout_constraintEnd_toEndOf="@+id/btn_add_store"
        app:layout_constraintStart_toStartOf="@+id/btn_add_store"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_store" />

</androidx.constraintlayout.widget.ConstraintLayout>