<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".home.ui.profile.ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray_400"
        android:src="@drawable/ic_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_full_name"
        style="@style/TextAppearance.MdcTypographyStyles.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_profile"
        app:layout_constraintStart_toStartOf="@+id/img_profile"
        app:layout_constraintTop_toBottomOf="@+id/img_profile"
        tools:text="Robby Alamsyah" />

    <TextView
        android:id="@+id/tv_username"
        style="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tv_full_name"
        app:layout_constraintStart_toStartOf="@+id/tv_full_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_full_name"
        tools:text="robby01" />

    <TextView
        android:id="@+id/tv_verified_status"
        style="@style/TextAppearance.MdcTypographyStyles.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/yellow_warning"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/email_not_verified"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="@+id/tv_username"
        app:layout_constraintStart_toStartOf="@+id/tv_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <com.barkit.app.customview.MyButton
        android:id="@+id/btn_my_store"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:text="@string/my_store"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_verified_status" />

    <com.barkit.app.customview.MyButton
        android:id="@+id/btn_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/logout"
        app:isSecondary="true"
        app:layout_constraintEnd_toEndOf="@+id/btn_my_store"
        app:layout_constraintStart_toStartOf="@+id/btn_my_store"
        app:layout_constraintTop_toBottomOf="@+id/btn_my_store" />

</androidx.constraintlayout.widget.ConstraintLayout>